# VRchat_api_agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: config.example.toml  config.toml
data/: memory.jsonl
scripts/: run_preflight.bat  run_preflight.ps1
src/: main.py
src/vrc_agent/: __init__.py  actuator.py  agent.py  async_log.py  config.py  llm_client.py  memory.py  perception.py  preflight.py  window_control.py  window_picker.py
